package com.sgitu.g4.entity;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.FetchType;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.PrePersist;
import jakarta.persistence.PreUpdate;
import jakarta.persistence.Table;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import java.time.Instant;

@Entity
@Table(name = "missions")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Mission {

	@Id
	@GeneratedValue(strategy = GenerationType.IDENTITY)
	private Long id;

	@Column(nullable = false, length = 64)
	private String vehiculeId;

	/** Identifiant conducteur fourni par G3 (gestion des utilisateurs / driver id) ; G4 ne stocke que cette référence opaque. */
	@Column(length = 64)
	private String chauffeurId;

	@ManyToOne(fetch = FetchType.LAZY, optional = false)
	@JoinColumn(name = "ligne_id")
	private Ligne ligne;

	@ManyToOne(fetch = FetchType.LAZY)
	@JoinColumn(name = "trajet_id")
	private Trajet trajet;

	@ManyToOne(fetch = FetchType.LAZY)
	@JoinColumn(name = "affectation_id")
	private AffectationVehiculeLigne affectation;

	@Enumerated(EnumType.STRING)
	@Column(nullable = false, length = 32)
	private StatutMission statut;

	private Instant plannedStart;
	private Instant actualStart;
	private Instant endedAt;

	@Column(length = 2000)
	private String notes;

	@Column(nullable = false, updatable = false)
	private Instant createdAt;

	private Instant updatedAt;

	@PrePersist
	void prePersist() {
		Instant now = Instant.now();
		createdAt = now;
		updatedAt = now;
	}

	@PreUpdate
	void preUpdate() {
		updatedAt = Instant.now();
	}
}
